<resources>
    <string name="app_name">ShowCatalogueApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="movie_tab">Movies</string>
    <string name="tv_tab">TV</string>
    <string name="alita_battle_angel">Alita: Battle Angel</string>
    <string name="drama">Drama</string>
    <string name="language">Language</string>
    <string name="status">Status</string>
    <string name="released">Released</string>
    <string name="pg_13">PG-13</string>
    <string name="user_score">User Score</string>
    <string name="_70">70%</string>
    <string name="overview">Overview</string>
    <string name="_2018">2018</string>
    <string name="poster">Poster</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>